# mine-like-a-goblin

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml
crates/miner-core/: Cargo.toml
crates/miner-core/src/: address.rs  block.rs  coinbase.rs  difficulty.rs  hash.rs  lib.rs  merkle.rs  network.rs
crates/miner-wasm/: Cargo.toml
crates/miner-wasm/src/: api.rs  lib.rs  miner.rs  state.rs
scripts/: build-gh-pages.sh  build.sh
web/: index.html
web/css/: main.css  scratch-card.css
web/js/: app.js  scratch-card.js
