[package]
name = "miner-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for Bitcoin scratch-off miner"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
miner-core = { path = "../miner-core", default-features = false }

# Hex encoding
hex = { workspace = true }

# WASM bindings
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Performance",
] }

# Random for WASM
getrandom = { workspace = true }

# Serialization for JS interop
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }

# Better panic messages in WASM
console_error_panic_hook = { workspace = true, optional = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
